# bid-intake-automation

./: .gitignore  skills-lock.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/scripts/: gmail_oauth_login.py
backend/src/: config.py  main.py
backend/src/api/: routes.py
backend/src/core/: db.py  extract.py  gmail.py  link_extract.py  openai_client.py  pipeline.py  serializers.py  state.py
backend/src/model/: __init__.py  relational.py  vector.py
frontend/: .env.example  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  constants.js  styles.css  utils.js
frontend/src/components/: AttentionBar.jsx  Flash.jsx  Header.jsx  HowToRibbon.jsx  IntakeDialog.jsx  MailCard.jsx  OpportunitiesTab.jsx  OpportunityCard.jsx  OpportunityDialog.jsx  OpsTab.jsx  PipelineTab.jsx  ReviewCard.jsx  ReviewTab.jsx
frontend/src/data/: demoData.json
