[project]
name = "backend"
version = "0.1.0"
description = "Byrdson bid intake FastAPI backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.139.0",
    "google-api-python-client>=2.198.0",
    "google-auth>=2.56.0",
    "google-auth-oauthlib>=1.4.0",
    "greenlet>=3.5.3",
    "httpx>=0.28.1",
    "openai>=2.45.0",
    "pgvector>=0.5.0",
    "pillow>=12.3.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]
